project: commit before critical changes
